# hoopoe

./: .env  .env.prod  .gitignore  Cargo.toml  README.md  build.rs  docker-compose.yml  tcp_wallet_secure_cell_config.json
.github/workflows/: cicd.yml  ui.yml
crypter/: Cargo.toml  README.md
crypter/src/: cry.rs  lib.rs
docs/: Rmq.md  actorWorker.md  govstokio.threads.md  lightvscpu.thread.md  pin.md  pointer.md  spawn.md  streaming.md  trait.md  vm.md
hooper/: README.md  app.rs  consts.rs
hooper/cli/: mod.rs
hooper/grpc/: event.rs  mod.rs
hooper/grpc/event/: client.rs  server.rs
hooper/p2p/: mod.rs
hooper/rpc/: README.md  event.rs  mod.rs
hooper/rpc/event/: server.rs
hooper/tcp/: mod.rs
infra/: api.http.json  hoopoe.uml  rustacki.uml
infra/docker/hooper-grpc/: Dockerfile
infra/docker/hooper-p2p/: Dockerfile
infra/docker/hooper-tcp/: Dockerfile
infra/docker/nginx/: .htpasswd  Dockerfile  adminer.hoopoe.app.conf  api.hoopoe.app.conf  api.your-hoopoe.conf  dbeaver.hoopoe.app.conf  docker.hoopoe.app.conf  event.api.hoopoe.app.conf  grafana.hoopoe.app.conf  grpc.api.hoopoe.app.conf  hoopoe.app.conf  nginx.conf  portainer.hoopoe.app.conf  rmq.hoopoe.app.conf  ssl-dhparams.pem
infra/docker/rustacki-http/: Dockerfile
jobs/: backup.cron  dellog.cron
migration/: README.md
migration/src/: lib.rs  m20240429_082043_hyper_locations.rs  m20240503_190902_hoops.rs  m20240508_213126_notifs.rs  m20240731_082953_users_hoops.rs
playground/: main.rs
proto/: event.proto  notif.proto
scripts/: backup.sh  dellog.sh  launch.sh  redeploy.sh  renew.sh  setup.sh
src/: apis.rs  app.rs  extractors.rs  interfaces.rs  lockers.rs  middlewares.rs  models.rs  plugins.rs  server.rs  services.rs  storage.rs  workers.rs
src/actors/: README.md  consumers.rs  cqrs.rs  mod.rs  producers.rs  user.rs  ws.rs
src/actors/consumers/: location.rs  notif.rs
src/actors/cqrs/: accessors.rs  mutators.rs
src/actors/cqrs/accessors/: hoop.rs  location.rs  notif.rs
src/actors/cqrs/mutators/: hoop.rs  location.rs  notif.rs
src/actors/producers/: location.rs  notif.rs  zerlog.rs
src/actors/sse/: mod.rs
src/actors/ws/: sessions.rs
src/actors/ws/servers/: hoop.rs
src/actors/ws/sessions/: hoop.rs
src/apis/: http.rs  v1.rs  ws.rs
src/apis/http/: v1.rs
src/apis/http/v1/: events.rs  health.rs
src/apis/http/v1/events/: get.rs  hoop.rs  notif.rs  set.rs  update.rs
src/apis/http/v1/health/: auth.rs  index.rs
src/apis/v1/: http.rs  ws.rs
src/apis/v1/http/: auth.rs  health.rs  hoop.rs  notif.rs
src/apis/v1/ws/: notif.rs
src/apis/ws/: v1.rs
src/apis/ws/v1/: hoop.rs
src/appstate/: mod.rs
src/cli/: mod.rs
src/config/: mod.rs
src/constants/: mod.rs  queries.rs
src/consts/: mod.rs  queries.rs
src/context/: mod.rs
src/entities/: hoops.rs  mod.rs  notifs.rs  prelude.rs  users_hoops.rs
src/error/: mod.rs
src/extractors/multipart/: mod.rs
src/interfaces/: crypter.rs  mail.rs  passport.rs  payment.rs  product.rs  purchase.rs  task.rs  tx.rs
src/lockers/: dlm.rs  llm.rs
src/middlewares/: README.md  check_token.rs  passport.rs  state.rs
src/models/: event.rs  http.rs  mod.rs  server.rs  user.rs
src/plugins/: notif.rs  passport.rs  purchase.rs
src/requests/: mod.rs
src/routers/: mod.rs
src/s3/: mod.rs
src/server/: mod.rs
src/server/http/: mod.rs
src/services/: events.rs  health.rs  stream.rs
src/storage/: cruft.rs  database.rs  engine.rs
src/tasks/: mod.rs
src/tests/: actor.rs  crypter.rs  engine.rs  govstokio.threads.md  mod.rs  mutexcondvar.md  orex.rs  storage.rs  task.rs  tx.rs
src/types/: mod.rs
src/workers/: Kafka.md  actor.rs  actorWorker.md  consumers.rs  cqrs.rs  mod.rs  producers.rs
src/workers/consumers/: notif.rs
src/workers/cqrs/: mutators.rs
src/workers/cqrs/accessors/: hoop.rs  notif.rs
src/workers/cqrs/mutators/: hoop.rs  notif.rs
src/workers/notif/: mod.rs
src/workers/producers/: notif.rs  zerlog.rs
src/workers/scheduler/: mod.rs
src/workers/ws/: servers.rs
src/workers/ws/servers/: hoop.rs
src/workers/zerlog/: mod.rs
