[package]
name = "hoopoe"
version = "0.1.0"
edition = "2021"

[workspace]
members = [ 
  "migration",
  "crypter"
]

[dependencies]
migration = { path = "migration", name = "migration" }
crypter = { path = "crypter", name = "crypter" }
async-std = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking", "stream", "multipart"] }
tokio-stream = { version = "0.1" }
serde = {version = "1", features = ["derive"] }
redis = { version = "0.25", features = ["tokio-comp", "cluster-async", "json"] }
redis-async = "0.17.1"
hyper = { version = "0.14", features = ["full"] }
actix-cors = "0.7.0"
sha2 = "0.10"
actix-multipart = "0.6"
actix-redis = "0.13.0"
actix = "0.13"
is_type = "0.2.1"
actix-web-actors = "4.3"
rayon = "1.10.0"
rand = "0.8"
actix-web = { version = "4", features = ["openssl"] }
rslock = "0.3.0"
tonic = "0.11.0"
futures = "0.3"
lapin = "2.3.1"
deadpool-lapin = { version = "0.12.0", features = ["serde"] }
deadpool-redis = "0.15.0"
deadpool = "0.11.2"
futures-util = "0.3"
serde_json = "1"
once_cell = "1"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
dotenv = "0.15"
rand_chacha = "0.3"
chacha20 = "0.9"
web3 = "0.19"
pretty_env_logger = "0.5.0"
sanitize-filename = "0.5"
log4rs = "1.3.0"
env_logger = "0.11"
bytes = { version = "1", features = ["serde"] }
wallexerr = "0.3.3"
hex = "0.4"
clap = { version = "4.5.4", features = ["derive"] }
thiserror = "1.0"
sea-orm = { version = "0.12", features = [ 
  "sqlx-postgres", 
  "runtime-tokio-rustls", 
  "macros", 
  "mock",
  "with-chrono",
  "with-time",
  "with-json",
  "with-uuid"
]}
trait-variant = "0.1"
prost = "0.12"
prost-types = "0.12"

[[bin]]
name = "hoopoe"
path = "src/app.rs"

[[bin]]
name = "hooper"
path = "hooper/app.rs"

[profile.release]
panic = "abort"
opt-level = 3
lto = true
codegen-units = 1
overflow-checks = true # panic on any overflow

[build-dependencies]
tonic-build = "0.10.2"

[profile.dev.package.sqlx-macros]
opt-level = 3
