[package]
name = "hoopoe"
version = "0.1.0"
edition = "2021"

[workspace]
members = [ 
  "migration",
  "crypter"
]

[dependencies]
migration = { path = "migration", name = "migration" }
crypter = { path = "crypter", name = "crypter" }
capnp-rpc = "0.19.2"
salvo = { version = "0.71.1", features = ["full"] }
actix = "0.13.5"
actix-web = "4"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1" }
reqwest = { version = "0.12", features = ["json", "blocking", "stream", "multipart"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = {version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
redis-async = "0.17"
sha2 = "0.10"
is_type = "0.2.1"
rayon = "1.10.0"
rand = "0.8"
rslock = "0.4.0"
tonic = "0.12"
futures = "0.3"
deadpool-lapin = { version = "0.12.1", features = ["serde", "rt_tokio_1"] }
deadpool-redis = "0.16.0"
futures-util = "0.3"
once_cell = "1"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
dotenv = "0.15"
pretty_env_logger = "0.5.0"
sanitize-filename = "0.5"
log4rs = "1.3.0"
env_logger = "0.11"
bytes = { version = "1", features = ["serde"] }
wallexerr = "0.3.3"
hex = "0.4"
clap = { version = "4.5.11", features = ["derive"] }
thiserror = "1.0"
percentage = "0.1.0"
sea-orm = { version = "1.0.1", features = [ 
  "sqlx-postgres", 
  "runtime-tokio-rustls", 
  "macros", 
  "mock",
  "with-chrono",
  "with-time",
  "with-json",
  "with-uuid"
]}
prost = "0.13"
prost-types = "0.13"
themis = "0.14.0"
base58 = "0.2.0"
rand_chacha = "0.3"
chacha20 = "0.9"
indexmap = "2.4"


[[bin]]
name = "hooper"
path = "hooper/app.rs"

[[bin]]
name = "playground"
path = "playground/main.rs"

[[bin]]
path = "src/app.rs"
name = "hoopoe"

[profile.release]
panic = "abort"
opt-level = 3
lto = true
codegen-units = 1
overflow-checks = true # panic on any overflow

[build-dependencies]
tonic-build = "0.10.2"

[dependencies.capnp]
version = "0.19.0"

[profile.dev.package.sqlx-macros]
opt-level = 3